<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2020 DASCOM All rights reserved.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DP130LActivity_ZPL">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/nfc_operation" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <Switch
                android:id="@+id/sw_nfc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_use" />

            <Switch
                android:id="@+id/sw_nfc_fast_connect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/touch_connect" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status" />

            <ImageView
                android:id="@+id/iv_nfc_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_error_red_24dp" />

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:background="@drawable/button_style"
                android:onClick="openNFC"
                android:text="@string/nfc_setting_interface" />


        </LinearLayout>

        <include layout="@layout/activity" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>