<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SelectEmulationActivity"
    android:orientation="vertical"
    android:gravity="center">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="-50dp"
        android:background="@drawable/border">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/please_select_printer_model"
            android:textColor="#1d953f"
            android:textSize="20dp" />

        <Spinner
            android:id="@+id/select_dialog_listview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:spinnerMode="dropdown" />

        <Button
            android:id="@+id/select_emulation_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/button_style"
            android:text="@string/confirm" />

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content">
           <TextView
               android:layout_width="wrap_content"
               android:textSize="16dp"
               android:layout_height="wrap_content"
               android:text="@string/record"
               />
           <Switch
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginLeft="10dp"
               android:thumb="@drawable/thumb"
               android:track="@drawable/track"
               android:id="@+id/sw_log_open"
               />

       </LinearLayout>


        <ImageView
            android:id="@+id/question"
            android:layout_marginTop="10dp"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:background="@drawable/question_mark"
            android:layout_gravity="end" />

        <TextView
            android:id="@+id/tv_verisonmsg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="version"
            android:layout_marginTop="10dp"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="15dp" />
    </LinearLayout>


</LinearLayout>